--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,17 @@
 ############################
 
 # Name of website
-title: My website
+title: Dhruvi Sisodiya
 
 # Your name to show in the footer
-author: Some Person
+author: Dhruvi Sisodiya
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "pages/aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -50,23 +50,23 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+  email: "dhruvisisodiya17@gmail.com"
+  # rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  # facebook: deanattali
+  github: dhruvi-sisodiya
+  # twitter: daattali
+  # patreon: DeanAttali
+  # youtube: "@daattali"
+  whatsapp: +919328921203
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-#  linkedin: daattali
+  linkedin: "dhruvi-sisodiya-1188ab251"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  spotify: yourname
-#  telephone: +14159998888
+  # telephone: +919328921203
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
@@ -102,7 +102,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "dhruvi-sisodiya.github.io"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
