--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@ author: Dhruvi Sisodiya
 ###############################################
 
 navbar-links:
-  About Me: "pages/aboutme"
+  About Me:
+    - Academic Interests: "pages/academics"
+    - Design Portfolio: "pages/design_portfolio"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -136,11 +138,11 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
+page-col: "#E0FBFC"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#EAEAEA"
+navbar-col: "#D3B1BC"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 footer-col: "#EAEAEA"
