--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,14 @@ author: Dhruvi Sisodiya
 ###############################################
 
 navbar-links:
-  About Me:
-    - Academic Interests: "pages/academics"
-    - Design Portfolio: "pages/design_portfolio"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  About Me: "pages/academics"
+  Projects: "pages/projects"
+  Design Portfolio: "pages/design_Portfolio"
+  
+  # Resources:
+  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
+  #   - Learn markdown: "https://www.markdowntutorial.com/"
+  # Author's home: "https://deanattali.com"
 
 ################
 # --- Logo --- #
